# hermes-rust-backend

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api_server.rs  auth.rs  gguf_engine.rs  hailo_engine.rs  lib.rs  main.rs  mcp_bridge.rs  multi_gpu.rs  onnx_engine.rs  openai_api.rs
