[package]
name = "hermes-rust-backend"
version = "0.2.0"
edition = "2021"
description = "Hermes AI Backend — GGUF + OpenAI API + Hailo-8 Vision"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
image = "0.25"
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9"
tokenizers = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
candle-core = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
