[package]
name = "hermes-rust-backend"
version = "0.3.0"
edition = "2021"
description = "Hermes AI Backend — GGUF inference + OpenAI API + Hailo-8 Vision + MCP"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
image = "0.25"
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9"
tokenizers = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
llama-cpp-2 = "0.1"
chrono = "0.4"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
once_cell = "1.20"
