[package]
name = "hermes-rust-backend"
version = "0.3.0"
edition = "2021"
description = "Hermes AI Backend — GGUF inference + OpenAI API + Hailo-8 Vision + MCP"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
